--- a/App.razor
+++ b/App.razor
@@ -1,10 +1,10 @@
 ﻿<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" />
+        <RouteView RouteData="@routeData" DefaultLayout="typeof(MainLayout)"/>
     </Found>
     <NotFound>
-        <LayoutView>
-            <p>Sorry, there's nothing at this address.</p>
+        <LayoutView Layout="typeof(MainLayout)">
+            <p class="main">Sorry, there's nothing at this address.</p>
         </LayoutView>
     </NotFound>
 </Router>
