Build rich interactive components

--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -14,9 +14,7 @@
     <title>Blazing Pizza</title>
 </head>
 <body>
-
     <component type="typeof(App)" render-mode="ServerPrerendered" />
-
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
@@ -30,5 +28,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert@latest/dist/sweetalert.min.js"></script>
 </body>
 </html>
