--- a/Pages/Checkout.razor
+++ b/Pages/Checkout.razor
@@ -4,44 +4,57 @@
 @inject OrderState OrderState
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
+@implements IDisposable
 
 <div class="main">
-    <div class="checkout-cols">
-        <div class="checkout-order-details">
-            <h4>Review order</h4>
-            @foreach(var pizza in Order.Pizzas){
-                <p>
-                    <strong>
-                        @(pizza.Size)"
-                        @pizza.Special.Name
-                        (£@pizza.GetFormattedTotalPrice())
-                    </strong>
-                </p>
-            }
-            <p>
-                <strong>
-                    Total price:
-                    £@Order.GetFormattedTotalPrice()
-                </strong>
-            </p>
-        </div>
-    </div>
+    <EditForm EditContext=editContext  OnValidSubmit=PlaceOrder>
+        <div class="checkout-cols">
+            <div class="checkout-order-details">
+                <h4>Review order</h4>
+                <OrderReview Order="Order"/>
+            </div>
 
-    <button class="checkout-button btn btn-warning" @onclick="PlaceOrder" disabled="@isSubmitting" >
-        Place order
-    </button>
+            <div class="checkout-delivery-address">
+                <h4>Deliver to...</h4>
+                @if(isError){
+                    <div class="alert alert-danger">Please enter a name and address</div>
+                }
+                <AddressEditor Address="Order.DeliveryAddress" />
+            </div>
+        </div
+
+        <button class="checkout-button btn btn-warning" type="Submit" disabled="@isError" >
+            Place order
+        </button>
+        <DataAnnotationsValidator/>
+    </EditForm>
 </div>
 
 @code {
     private Order Order => OrderState.Order;
+    private bool isError = true;
+    private EditContext editContext;
 
-    private bool isSubmitting;
+    public void Dispose(){
+        editContext.OnFieldChanged -= HandleFieldChanged;
+    }
+
+    protected override void OnInitialized(){
+        editContext = new(Order.DeliveryAddress);
+        editContext.OnFieldChanged += HandleFieldChanged;
+    }
+
+    private void HandleFieldChanged(object sender, FieldChangedEventArgs e){
+        isError = !editContext.Validate();
+        StateHasChanged();
+    }
+
     private async Task PlaceOrder(){
-        isSubmitting = true;
         var response = await HttpClient.PostAsJsonAsync(
             NavigationManager.BaseUri + "orders", OrderState.Order);
         var newOrderId = await response.Content.ReadFromJsonAsync<int>();
         OrderState.ResetOrder();
         NavigationManager.NavigateTo($"/myorders/{newOrderId}");
     }
+
 }
