--- a/Pages/OrderDetail.razor
+++ b/Pages/OrderDetail.razor
@@ -1,21 +1,22 @@
 ﻿@page "/myorders/{orderId:int}"
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
+@implements IDisposable
 
 <div class="main">
     @if(invalidOrder){
         <h2>Order not found</h2>
         <p>We're sorry but this order no loger exists.</p>
     }
-    else if(orderWithStatus == null){
+    else if(orderWithStatus is null){
         <div class="track-order">
             <div class="track-order-title">
                 <h2>
                     <text>Loading...</text>
                 </h2>
-                <p class="ml-auto mb-0">
+                @* <p class="ml-auto mb-0">
                     ...
-                </p>
+                </p> *@
             </div>
         </div>
     }
@@ -32,6 +33,12 @@
             </div>
             <div class="track-order-body">
                 <div class="track-order-details">
+                   @if (IsOrderIncomplete)
+                    {
+                        <div class="spinner-grow text-danger float-right" role="status">
+                            <span class="sr-only">Checking your order status...</span>
+                        </div>
+                    }
                     @foreach(var pizza in orderWithStatus.Order.Pizzas){
                         <p>
                             <strong>
@@ -51,18 +58,42 @@
 @code {
     [Parameter]
     public int OrderId {get;set;}
-    
+    bool IsOrderIncomplete =>
+    orderWithStatus is null || orderWithStatus.IsDelivered == false;
+
+    PeriodicTimer timer = new(TimeSpan.FromSeconds(3));
+
     private OrderWithStatus orderWithStatus;
     private bool invalidOrder = false;
 
-    protected override async Task OnParametersSetAsync(){
-        try{
+    protected override async Task OnParametersSetAsync() =>
+    await GetLatestOrderStatusUpdatesAsync();
+
+    protected override Task OnAfterRenderAsync(bool firstRender) =>
+    firstRender ? StartPollingTimerAsync() : Task.CompletedTask;
+
+    async Task GetLatestOrderStatusUpdatesAsync()
+    {
+        try
+        {
             orderWithStatus = await HttpClient.GetFromJsonAsync<OrderWithStatus>(
                 $"{NavigationManager.BaseUri}orders/{OrderId}");
         }
-        catch(Exception ex){
+        catch (Exception ex)
+        {
             invalidOrder = true;
             Console.Error.WriteLine(ex);
         }
     }
+
+
+    async Task StartPollingTimerAsync()
+    {
+        while (IsOrderIncomplete && await timer.WaitForNextTickAsync())
+        {
+            await GetLatestOrderStatusUpdatesAsync();
+            StateHasChanged();
+        }
+    }
+    public void Dispose() => timer.Dispose();
 }
